[package]
name = "arithmetic-of-letters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.7.3"
lazy_static = "1.4.0"
palette = "0.7.2"
pest = "2.7.0"
pest_derive = "2.7.1"
tiny-skia = "0.11.1"
